[gd_scene load_steps=2 format=3 uid="uid://sigilshop001"]

[ext_resource type="Script" path="res://scripts/ui/sigil_shop_panel.gd" id="1"]

[node name="SigilShopPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -300.0
offset_right = 450.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="PanelContainer/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "SIGIL SHOP"

[node name="SigilLabel" type="Label" parent="PanelContainer/VBox/Header"]
layout_mode = 2
text = "Sigils: 0"

[node name="Spacer" type="Control" parent="PanelContainer/VBox/Header"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="CloseButton" type="Button" parent="PanelContainer/VBox/Header"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "X"

[node name="CategoryTabs" type="TabBar" parent="PanelContainer/VBox"]
layout_mode = 2
tab_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ItemGrid" type="GridContainer" parent="PanelContainer/VBox/ScrollContainer"]
layout_mode = 2
columns = 4

[node name="TooltipPanel" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(300, 200)
layout_mode = 0
offset_right = 300.0
offset_bottom = 200.0

[node name="MarginContainer" type="MarginContainer" parent="TooltipPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TooltipLabel" type="RichTextLabel" parent="TooltipPanel/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
fit_content = true
